--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-	<script src="js/jssor.slider-28.1.0.min.js"></script>
-
     <!--Snow Flakes-->
 <!--div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
@@ -732,7 +726,7 @@
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script src="https://use.fontawesome.com/434d359724.js"></script>
-<script src="/js/main.js"></script>
+<script src="http://iiitvadodara.ac.in/js/main.js"></script>
 <script>
 $(document).on('click', function (e) {
     var
