--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <div class="carousel-caption slider-con">
                         <h2>Welcome to <span>DLS</span></h2>
          
-                        <img height="40px" src="img/dlsobucrest.jpg" alt="DLSOBU">
+                        <img height="50px" src="img/dlsobucrest.png" alt="DLSOBU">
                 <div></div>
                         <p> INDIVISA MANENT</p>
                         
