--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                     </div>
                 </div>
 
-                <li><a href="news.php.html">News</a></li>
-                                <li><a href="announcements.php.html">Announcements</a></li>
-                                
+                <a href="news.php.html">News</a>
+                                <a href="announcements.php.html">Announcements</a>
+
                 <div class="header-links">
                     <a href="#" data-toggle="popover" title="Address"
                        data-content="c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka"
