--- a/index.html
+++ b/index.html
@@ -195,10 +195,11 @@
                             <li><a href="career.html">Career</a></li>
                             <li><a href="gallery.html">Photo Gallery</a></li>
                         </ul>
+                        <li><a href="news.html">News</a></li>
+                            <li><a href="announcements.html">Announcements</a></li>
+                        </ul>
                     </div>
                     <!--/.nav-collapse -->
-                    <a href="news.php.html">News</a>
-                                <a href="announcements.php.html">Announcements</a>
                 </div>
             </div>
         </nav>
