--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="linkages/da-iict.html">Vision & Mission</a></li>
+                                            <li><a href="linkages/mission-vision.html">Vision & Mission</a></li>
                                             <li><a href="linkages/gsfc.html">Flag</a></li>
                                             <li><a href="linkages/germi.html">Crest</a></li>
                                             <li><a href="linkages/tcs.html">College Anthem</a></li>
