--- a/linkages/mission-vision.html
+++ b/linkages/mission-vision.html
@@ -136,15 +136,47 @@
             <!-- Contents starts here -->
             <div class="contents">
                 <div style="text-align: center;">
-                    <h3>DHIRUBHAI AMBANI INSTITUTE OF INFORMATION AND COMMUNICATION TECHNOLOGY</h3>
+                    <h3>Our Vision</h3>
                 </div>
                 <div style="text-align: center;">
-                    <a href="http://www.daiict.ac.in" target="_blank">
-                        <img class="responsive-img" src="../img/daiict.jpg" style="width: 250px; height:250px;">
+                    <a href="#" target="_blank">
+                        <img class="responsive-img" src="../img/dlsobucrest.jpg" style="width: 250px; height:250px;">
                     </a>
                 </div>
                 <br/>
-                <br/> Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT), is a technological university located in Gandhinagar, Gujarat, India. It is named after the Gujarati entrepreneur and Reliance group founder Dhirubhai Ambani. It is run by the Dhirubhai Ambani Foundation and is promoted by the Anil Dhirubhai Ambani Group.
+                <br/> Having placed in a multi-racial, multi-religious and multi-lingual society with
+                different cultures, traditions and customs in the Colombo North area and having
+                imbibed with the Lasallian Charism, we strive to base our educational efforts and
+                vision on the Lasallian Education Model which develops the potential of a student’s
+                Mind, Heart and Spirit. Addressing these three areas empowers students to live a
+                fully human life with personal integrity used in service of their communities and
+                societies thus producing peace loving and productive citizens for Sri Lanka.
+                <br/>
+            </div>
+        </div>
+
+        <div class="contents-wrapper">
+            <!-- Contents starts here -->
+            <div class="contents">
+                <div style="text-align: center;">
+                    <h3>Our Mission</h3>
+                </div>
+                <div style="text-align: center;">
+                    <a href="#" target="_blank">
+                        <img class="responsive-img" src="../img/IIITV_Logo_1x1_small.jpg" style="width: 250px; height:250px;">
+                    </a>
+                </div>
+                <br/>
+                <br/> De La Salle College, Colombo aspires to provide an environment which
+                actively encourages all members to strive to achieve personal excellence through a
+                challenging, comprehensive curriculum and a variety of teaching styles.
+                
+                The curriculum aims to address student’s need for personal growth, to arrive at an
+                appreciation of their culture, to address the expectations of the world of work and
+                the challenges of a rapidly changing society which establishes a climate in which
+                students are encouraged to strive for increasing levels of self - discipline and
+                responsibility and where students, staff and parents experience co-operation and
+                mutual support
                 <br/>
             </div>
         </div>
