--- a/bog.html
+++ b/bog.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>IIIT-V | Board of Governors</title>
+    <meta name="viewport" content="width=device-width, initial-scale=2">
+    <title>De La Salle College Colombo 15 | About</title>
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
