--- a/linkages/mission-vision.html
+++ b/linkages/mission-vision.html
@@ -57,6 +57,16 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
                                         <li><a href="../about.html">About</a></li>
+                                        <li class="dropdown-submenu active">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
+                                            <ul class="dropdown-menu">
+                                                <li class="active"><a href="da-iict.html">Vission & Mission</a></li>
+                                                <li><a href="gsfc.html">GSFC</a></li>
+                                                <li><a href="germi.html">GERMI</a></li>
+                                                <li><a href="tcs.html">TCS</a></li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                         <li><a href="../directors_message.html">Director's Message</a></li>
                                         <li><a href="../society_members.html">Society Members</a></li>
                                         <li><a href="../academic_council.html">Academic Council</a></li>
@@ -64,16 +74,7 @@
                                         <li><a href="../rti.html">RTI</a></li>
                                         <li><a href="../pdf/MOU.pdf">MOU</a></li>
                                         <li><a href="../pdf/IIITV-Regulations.pdf">Rules and Regulations</a></li>
-                                        <li class="dropdown-submenu active">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Linkages</a>
-                                            <ul class="dropdown-menu">
-                                                <li class="active"><a href="da-iict.html">DA-IICT</a></li>
-                                                <li><a href="gsfc.html">GSFC</a></li>
-                                                <li><a href="germi.html">GERMI</a></li>
-                                                <li><a href="tcs.html">TCS</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
+                                        
                                 </li>
                                 <li>
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Academics <b class="caret"></b></a>
