--- a/linkages/mission-vision.html
+++ b/linkages/mission-vision.html
@@ -60,7 +60,7 @@
                                         <li class="dropdown-submenu active">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
                                             <ul class="dropdown-menu">
-                                                <li class="active"><a href="da-iict.html">Vission & Mission</a></li>
+                                                <li class="active"><a href="mission-vision.html">Vission & Mission</a></li>
                                                 <li><a href="gsfc.html">GSFC</a></li>
                                                 <li><a href="germi.html">GERMI</a></li>
                                                 <li><a href="tcs.html">TCS</a></li>
