--- a/linkages/mission-vision.html
+++ b/linkages/mission-vision.html
@@ -57,6 +57,15 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
                                         <li><a href="../about.html">About</a></li>
+                                        <li class="dropdown-submenu">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
+                                            <ul class="dropdown-menu">
+                                                <li><a href="linkages/mission-vision.html">Vision & Mission</a></li>
+                                                <li><a href="linkages/gsfc.html">Flag</a></li>
+                                                <li><a href="linkages/germi.html">Crest</a></li>
+                                                <li><a href="linkages/tcs.html">College Anthem</a></li>
+                                            </ul>
+                                        </li>
                                         <li><a href="../directors_message.html">Director's Message</a></li>
                                         <li><a href="../society_members.html">Society Members</a></li>
                                         <li><a href="../academic_council.html">Academic Council</a></li>
