--- a/linkages/mission-vision.html
+++ b/linkages/mission-vision.html
@@ -57,13 +57,13 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
                                         <li><a href="../about.html">About</a></li>
-                                        <li class="dropdown-submenu">
+                                        <li class="dropdown-submenu active">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="linkages/mission-vision.html">Vision & Mission</a></li>
-                                                <li><a href="linkages/gsfc.html">Flag</a></li>
-                                                <li><a href="linkages/germi.html">Crest</a></li>
-                                                <li><a href="linkages/tcs.html">College Anthem</a></li>
+                                                <li class="active"><a href="mission-vision.html">Vission & Mission</a></li>
+                                                <li><a href="gsfc.html">GSFC</a></li>
+                                                <li><a href="germi.html">GERMI</a></li>
+                                                <li><a href="tcs.html">TCS</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="../directors_message.html">Director's Message</a></li>
