--- a/linkages/mission-vision.html
+++ b/linkages/mission-vision.html
@@ -148,13 +148,13 @@
                     </a>
                 </div>
                 <br/>
-                <br/> <p> <center> Having placed in a multi-racial, multi-religious and multi-lingual society with
+                <br/> Having placed in a multi-racial, multi-religious and multi-lingual society with
                 different cultures, traditions and customs in the Colombo North area and having
                 imbibed with the Lasallian Charism, we strive to base our educational efforts and
                 vision on the Lasallian Education Model which develops the potential of a student’s
                 Mind, Heart and Spirit. Addressing these three areas empowers students to live a
                 fully human life with personal integrity used in service of their communities and
-                societies thus producing peace loving and productive citizens for Sri Lanka. </center></p>
+                societies thus producing peace loving and productive citizens for Sri Lanka.
                 <br/>
             </div>
         </div>
@@ -171,7 +171,7 @@
                     </a>
                 </div>
                 <br/>
-                <br/> <p> <center> De La Salle College, Colombo aspires to provide an environment which
+                <br/> De La Salle College, Colombo aspires to provide an environment which
                 actively encourages all members to strive to achieve personal excellence through a
                 challenging, comprehensive curriculum and a variety of teaching styles.
                 
@@ -180,7 +180,7 @@
                 the challenges of a rapidly changing society which establishes a climate in which
                 students are encouraged to strive for increasing levels of self - discipline and
                 responsibility and where students, staff and parents experience co-operation and
-                mutual support </center> </p>
+                mutual support
                 <br/>
             </div>
         </div>
