--- a/linkages/mission-vision.html
+++ b/linkages/mission-vision.html
@@ -54,7 +54,7 @@
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
                                 <li class="active">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Info <b class="caret"></b></a>
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
                                         <li><a href="../about.html">About</a></li>
                                         <li class="dropdown-submenu active">
@@ -73,7 +73,13 @@
                                         <li><a href="../rti.html">RTI</a></li>
                                         <li><a href="../pdf/MOU.pdf">MOU</a></li>
                                         <li><a href="../pdf/IIITV-Regulations.pdf">Rules and Regulations</a></li>
-                        
+                                        <li class="dropdown-submenu active">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
+                                            <ul class="dropdown-menu">
+                                                <li class="active"><a href="mission-vision.html">Vission & Mission</a></li>
+                                                <li><a href="gsfc.html">GSFC</a></li>
+                                                <li><a href="germi.html">GERMI</a></li>
+                                                <li><a href="tcs.html">TCS</a></li>
                                             </ul>
                                         </li>
                                     </ul>
