--- a/gallery.html
+++ b/gallery.html
@@ -158,113 +158,123 @@
                     <!-- Remove appropriate comment and insert relevant caption if needed. -->
 
                     <!--Image 1-->
-                    <a class="element-item grid-item mix mockups" href="img/board1.jpg">
+                    <a class="element-item grid-item mix mockups" href="img/gallery/1.jpg">
                         <!--                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
                                                     </div>
-                        --> <img src="img/thumbnail/board1.jpg" alt="">
+                        --> <img src="img/gallery/1.jpg" alt="">
                     </a>
 
                     <!--Image 2-->
-                    <a class="element-item grid-item mix mockups" href="img/classroom.jpg">
+                    <a class="element-item grid-item mix mockups" href="img/gallery/2.jpg">
                         <!--                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
                                                     </div>
-                        --> <img src="img/thumbnail/classroom.jpg" alt="">
+                        --> <img src="img/gallery/2.jpg" alt="">
                     </a>
 
                     <!--Image 3-->
-                    <a class="element-item grid-item mix mockups" href="img/gallery/faculty.jpg">
+                    <a class="element-item grid-item mix mockups" href="img/gallery/3.jpg">
                         <!--                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
                                                     </div>
-                        --> <img src="img/thumbnail/faculty.jpg" alt="">
+                        --> <img src="img/gallery/3.jpg" alt="">
                     </a>
 
                     <!--Image 4-->
-                    <a class="element-item grid-item mix mockups" href="img/gallery/focus.jpg">
+                    <a class="element-item grid-item mix mockups" href="img/gallery/4.jpg">
                         <!--                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
                                                     </div>
-                        --> <img src="img/thumbnail/focus.jpg" alt="">
+                        --> <img src="img/gallery/4.jpg" alt="">
                     </a>
 
                     <!--Image 5-->
-                    <a class="element-item grid-item mix mockups" href="img/event1.JPG">
+                    <a class="element-item grid-item mix mockups" href="img/gallery/5.jpg">
                         <!--                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
                                                     </div>
-                        --> <img src="img/thumbnail/event1.jpg" alt="">
+                        --> <img src="img/gallery/5.jpg" alt="">
                     </a>
 
                     <!--Image 6-->
-                    <a class="element-item grid-item mix mockups" href="img/event2.JPG">
+                    <a class="element-item grid-item mix mockups" href="img/gallery/6.jpg">
                         <!--                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
                                                     </div>
-                        --> <img src="img/thumbnail/event2.jpg" alt="">
+                        --> <img src="img/gallery/6.jpg" alt="">
                     </a>
 
                     <!--Image 7-->
-                    <a class="element-item grid-item mix mockups" href="img/gallery/students.jpg">
+                    <a class="element-item grid-item mix mockups" href="img/gallery/7.jpg">
                         <!--                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
                                                     </div>
-                        --> <img src="img/thumbnail/students.jpg" alt="">
+                        --> <img src="img/gallery/7.jpg" alt="">
                     </a>
 
                     <!--Image 8-->
-                    <a class="element-item grid-item mix mockups" href="img/gallery/gallery.jpg">
+                    <a class="element-item grid-item mix mockups" href="img/gallery/8.jpg">
                         <!--                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
                                                     </div>
-                        --> <img src="img/thumbnail/gallery.jpg" alt="">
+                        --> <img src="img/gallery/8.jpg" alt="">
                     </a>
 
                     <!--Image 9-->
-                    <a class="element-item grid-item mix mockups" href="img/gallery/talk.jpg">
+                    <a class="element-item grid-item mix mockups" href="img/gallery/9.jpg">
                         <!--                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
                                                     </div>
-                        --> <img src="img/thumbnail/talk.jpg" alt="">
+                        --> <img src="img/gallery/9.jpg" alt="">
                     </a>
 
                     <!--Image 10-->
-                    <a class="element-item grid-item mix mockups" href="img/event3.jpg">
+                    <a class="element-item grid-item mix mockups" href="img/gallery/10.jpg">
                         <!--                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
                                                     </div>
-                        --> <img src="img/thumbnail/event3.jpg" alt="">
+                        --> <img src="img/gallery/10.jpg" alt="">
                     </a>
 
                     <!--Image 11-->
-                    <a class="element-item grid-item mix mockups" href="img/gallery/winners.jpg">
+                    <a class="element-item grid-item mix mockups" href="img/gallery/11.jpg">
                         <!--                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
                                                     </div>
-                        --> <img src="img/thumbnail/winners.jpg" alt="">
+                        --> <img src="img/gallery/11.jpg" alt="">
+                    </a>
+
+                    <!--Image 11-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/12.jpg">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/12.jpg" alt="">
                     </a>
 
                 </div>
