--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
                         <source src="vid/dlscrest.mp4" type="video/mp4">
                     </video>
                     <div class="carousel-caption slider-con">
-                        <h2>Welcome to <span>DLS</span></h2>
+                        <h2>OVER 116TH PROUD ANNIVERSARY WITH <span>DE LA SALLE COLLEGE</span></h2>
          
-                        <img height="50px" src="img/dlsobucrest.png" alt="DLSOBU">
+                        <img height="70px" src="img/dlsobucrest.png" alt="DLSOBU">
                 <div></div>
-                        <p>' INDIVISA MANENT '</p>
+                        <p>~ INDIVISA MANENT ~</p>
                         
                     </div>
                 </div>
