--- a/linkages/college-motto-and-flag_colours.html
+++ b/linkages/college-motto-and-flag_colours.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>IIIT Vadodara | GFSC</title>
+    <title>De La Salle College Colombo | Motto,Flag & Colours</title>
     <!--Style starts-->
     <link rel="icon" type="image/png" href="../img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
@@ -26,8 +26,8 @@
                             </div>
                             <div class="name">
                                 <a href="../index.html" title="">
-                                    <h5>Indian Institute of Information Technology</h5>
-                                    <h5 class="primary-color">Vadodara</h5>
+                                    <h5>De La Salle College Colombo 15</h5>
+                                    <h5 class="primary-color">Mutwal</h5>
                                 </a>
                             </div>
                         </div>
@@ -56,6 +56,15 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
                                         <li><a href="../about.html">About</a></li>
+                                        <li class="dropdown-submenu active">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
+                                            <ul class="dropdown-menu">
+                                                <li><a href="mission-vision.html">Vision & Mission</a></li>
+                                                <li class="active"><a href="college-motto-and-flag_colours.html">College Motto | Flag & Colours</a></li>
+                                                <li><a href="germi.html">GERMI</a></li>
+                                                <li><a href="tcs.html">TCS</a></li>
+                                            </ul>
+                                        </li>
                                         <li><a href="../directors_message.html">Director's Message</a></li>
                                         <li><a href="../society_members.html">Society Members</a></li>
                                         <li><a href="../academic_council.html">Academic Council</a></li>
@@ -63,7 +72,7 @@
                                         <li><a href="../rti.html">RTI</a></li>
                                         <li><a href="../pdf/MOU.pdf">MOU</a></li>
                                         <li><a href="../pdf/IIITV-Regulations.pdf">Rules and Regulations</a></li>
-                                        <li class="dropdown-submenu active">
+                                        <!--li class="dropdown-submenu active">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Linkages</a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="da-iict.html">DA-IICT</a></li>
@@ -71,7 +80,7 @@
                                                 <li><a href="germi.html">GERMI</a></li>
                                                 <li><a href="tcs.html">TCS</a></li>
                                             </ul>
-                                        </li>
+                                        </li-->
                                     </ul>
                                 </li>
                                 <li>
@@ -135,10 +144,8 @@
         <div class="contents-wrapper">
             <!-- Contents starts here -->
             <div class="contents" style="text-align:center;">
-                <h3>GUJARAT STATE FERTILIZERS & CHEMICALS LIMITED, VADODARA</h3>
-                <a href="http://www.gsfclimited.com">
-                    <img class="responsive-img" src="../img/gsfc.jpg" style="width: 250px; height:250px;">
-                </a>
+                <h3> <p><b id="docs-internal-guid-0870b9ca-7fff-8ea7-0101-71917fa4a704" style="font-weight: normal;"><br /></b></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: center;"><span style="background-color: transparent; color: black; font-family: Balthazar,serif; font-size: 20pt; font-style: normal; font-variant: normal; font-weight: 700; text-decoration: none; vertical-align: baseline; white-space: pre;">College &nbsp; Motto, Flag&nbsp; &amp;&nbsp; Colours</span></p><div class="separator" style="clear: both; text-align: center;"><span style="border: none; display: inline-block; height: 284px; margin-left: 1em; margin-right: 1em; overflow: hidden; width: 480px;"><img height="284" src="https://lh3.googleusercontent.com/yuGkRbVsesNb8XyPrOODreYromE2SmZgo5zWTDHm_QqVPGd7FV5toA4FPL8xNcHrkkK-nWmi0_MHupGs5X8OxTPMrgn0v91V2UOwMMcRd0lW9t0xJyW5TcyIQr16N8nv88kx3yA=s1600" style="margin-left: 0px; margin-top: 0px;" width="480" /></span></div><p><b style="font-weight: normal;"><br /></b><span style="font-family: &quot;Gentium Basic&quot;, serif; font-size: 12pt; font-style: italic; font-weight: 700; text-align: justify; white-space: pre-wrap;">The Motto</span></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: 400; text-decoration: none; vertical-align: baseline; white-space: pre;">&nbsp;“Indivisa Manent” meant in English is “We Stand Undivided” signifies INSEPEPARABLE BROTHERHOOD, a motto of the La Salle family which the Brothers came to cherish.</span></p><p><b style="font-weight: normal;"><br /><br /></b></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 12pt; font-style: italic; font-variant: normal; font-weight: 700; text-decoration: none; vertical-align: baseline; white-space: pre;">The Chevrons</span></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: 400; text-decoration: none; vertical-align: baseline; white-space: pre;">These form part of the coat of arms of the De La Salle family of Rheims, France. There are three bent bars of inverted “V” shapes. They indicate that we should have ZEAL in carrying out our tasks and the courage never to give up.</span></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: 400; text-decoration: none; vertical-align: baseline; white-space: pre;">&nbsp;</span></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 12pt; font-style: italic; font-variant: normal; font-weight: 700; text-decoration: none; vertical-align: baseline; white-space: pre;">The Star</span></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: 400; text-decoration: none; vertical-align: baseline; white-space: pre;">This five-pointed, radiant star is the worldwide logo of the De La Salle Brothers. It reminds them of the spirit of their institute, the spirit of FAITH. The spirit of faith will lead us to Christ just as the star of Bethlehem led the Wise Men of the East to Christ. The star led the shepherds to Christ on the first Christmas night. The light from stars keeps navigators of ships and aircraft on course. It can be our response to the Gospel directive “Let your light shine before all-that they may see your good works and glorify your Father in Heaven”.&nbsp;</span></p><p><b style="font-weight: normal;"><br /></b></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 12pt; font-style: italic; font-variant: normal; font-weight: 700; text-decoration: none; vertical-align: baseline; white-space: pre;">The Wave</span></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: 400; text-decoration: none; vertical-align: baseline; white-space: pre;">This wavy background behind the star stands for Mutwal’s pristine glory stands firmly on the beach of silvery sand.&nbsp;</span></p><p><b style="font-weight: normal;"><br /></b></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 13pt; font-style: italic; font-variant: normal; font-weight: 700; text-decoration: none; vertical-align: baseline; white-space: pre;">Colours</span><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 13pt; font-style: italic; font-variant: normal; font-weight: 400; text-decoration: none; vertical-align: baseline; white-space: pre;">&nbsp;&nbsp;</span></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 13pt; font-style: normal; font-variant: normal; font-weight: 400; text-decoration: none; vertical-align: baseline; white-space: pre;">It is inclusion in the Coat of Arms, the Virile Red and Gentle Blue are the colours of St. John Baptist De La Salle, the Founder of Brothers of Christian Schools and Patron Saint of Teachers and of this Institution in particulary after whom the school is named. Red too, stands for Valour and Blue for Endurance or Perseverance.</span></p><p><b style="font-weight: normal;"><br /></b></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 13pt; font-style: italic; font-variant: normal; font-weight: 700; text-decoration: none; vertical-align: baseline; white-space: pre;">Hallmark</span><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 13pt; font-style: italic; font-variant: normal; font-weight: 400; text-decoration: none; vertical-align: baseline; white-space: pre;">&nbsp;&nbsp;</span></p><p></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 13pt; font-style: normal; font-variant: normal; font-weight: 400; text-decoration: none; vertical-align: baseline; white-space: pre;">The hallmark of the College in to maintain “STRICT DISCIPLINE with GREAT KINDNESS”. It is the art of harnessing.</span></p><div><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 13pt; font-style: normal; font-variant: normal; font-weight: 400; text-decoration: none; vertical-align: baseline; white-space: pre;"><br /></span></div> </h3>
+                
             </div>
         </div>
         <footer>
