--- a/linkages/college-motto-and-flag_colours.html
+++ b/linkages/college-motto-and-flag_colours.html
@@ -148,6 +148,13 @@
                 <p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: center;"><br /></p><p><span style="font-family: &quot;Gentium Basic&quot;, serif; font-size: 12pt; font-style: italic; font-weight: 700; text-align: justify; white-space: pre-wrap;">The Motto</span></p>
                 <p>“Indivisa Manent” meant in English is “We Stand Undivided” signifies INSEPEPARABLE BROTHERHOOD, a motto of the La Salle family which the Brothers came to cherish.</p>
 
+                <p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: center;"><br /></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="background-color: transparent; color: black; font-family: 'Gentium Basic',serif; font-size: 12pt; font-style: italic; font-variant: normal; font-weight: 700; text-decoration: none; vertical-align: baseline; white-space: pre;">The Chevrons</span></p>
+                 <p>These form part of the coat of arms of the De La Salle family of Rheims, France. There are three bent bars of inverted “V” shapes. They indicate that we should have ZEAL in carrying out our tasks and the courage never to give up.</p>
+
+                
+
+
+
 
             </div>
         </div>
