--- a/blog.html
+++ b/blog.html
@@ -144,16 +144,16 @@
                                     <div class="blog-grid">
                                         <div class="blog-img">
                                             <div class="date">
-                                                <span>04</span>
-                                                <label>FEB</label>
+                                                <span>18</span>
+                                                <label>OCT</label>
                                             </div>
                                             <a href="#">
-                                                <img src="https://via.placeholder.com/400x200/FFB6C1/000000" title="" alt="">
+                                                <img src="https://scontent.fcmb3-2.fna.fbcdn.net/v/t39.30808-6/241210380_4554607584596594_4643022653916699749_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=0debeb&_nc_ohc=PA3tbECThqAAX8YsxmZ&_nc_ht=scontent.fcmb3-2.fna&oh=ff81e677ad81997c1904a04fc28e764a&oe=617461A7" title="" alt="">
                                             </a>
                                         </div>
                                         <div class="blog-info">
-                                            <h5><a href="#">Prevent 75% of visitors from google analytics</a></h5>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                            <h5><a href="#">Dear Old Boys & Well Wishers of De La Salle College,</a></h5>
+                                            <p>It is a well known fact that Rev Br Joseph Jayakanthan who was waiting for all of us, took over duties as the Principal of the school on October 06th, 2021.</p>
                                             <div class="btn-bar">
                                                 <a href="#" class="px-btn-arrow">
                                                     <span>Read More</span>
