--- a/blog.html
+++ b/blog.html
@@ -167,16 +167,16 @@
                                     <div class="blog-grid">
                                         <div class="blog-img">
                                             <div class="date">
-                                                <span>04</span>
-                                                <label>FEB</label>
+                                                <span>15</span>
+                                                <label>MAY</label>
                                             </div>
                                             <a href="#">
-                                                <img src="https://via.placeholder.com/400x200/D3D3D3/000000" title="" alt="">
+                                                <img src="img/st-delasalle.jpg" title="" alt="">
                                             </a>
                                         </div>
                                         <div class="blog-info">
-                                            <h5><a href="#">Prevent 75% of visitors from google analytics</a></h5>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                            <h5><a href="#">The Teachers Saint</a></h5>
+                                            <p>You, O Lord, are my strength, my patience, my light, and my counsel. It is you who touch the hearts of the children entrusted to my care. Abandon me not to myself for one moment</p>
                                             <div class="btn-bar">
                                                 <a href="#" class="px-btn-arrow">
                                                     <span>Read More</span>
