--- a/blog.html
+++ b/blog.html
@@ -168,7 +168,7 @@
                                         <div class="blog-img">
                                             <div class="date">
                                                 <span>15</span>
-                                                <label>MAY</label>
+                                                <label>MAY,2020</label>
                                             </div>
                                             <a href="#">
                                                 <img src="img/st-delasalle.jpg" title="" alt="">
